fix some issue on IE

--- a/eXoApplication/calendar/webapp/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
+++ b/eXoApplication/calendar/webapp/src/main/webapp/skin/DefaultSkin/webui/Stylesheet.css
@@ -564,6 +564,7 @@
 .UIDayView .EventDayContent .TdDotLine{
 	border-top:  1px dotted #c7c7c7;
 	border-left: none ;
+	-moz-user-select: none ;
 }
 
 .UIDayView .EventDayContent .TdTop {
@@ -1787,6 +1788,7 @@
 	background: #cccccc ;
 	position: absolute ;
 	opacity: 0.5 ;
+	filter:alpha(opacity=50) ;
 	-moz-user-select : none ;
 }
 
